--- a/docker/config/filebeat_copy.yml
+++ b/docker/config/filebeat_copy.yml
@@ -1,18 +1,16 @@
 filebeat.inputs:
 - type: container
-  stream: stdout
+  stream: all
+  exclude_files: ['\.gz$']
   paths:
-    - "/var/log/containers/*.log"
-  multiline.pattern: '^@.*message\ EventError.*'
+    - '/var/lib/docker/containers/*/*.log'
+  multiline.pattern: '^\[[0-9]{4}-[0-9]{2}-[0-9]{2}'
   multiline.negate: true
   multiline.match: after
-  multiline.max_lines: 14
   ignore_older: 30m
   scan_frequency: 5m
   harvester_limit: 1
   close_inactive: 10s
-
-
 processors:
 - add_docker_metadata:
     host: "unix:///var/run/docker.sock"
@@ -25,12 +23,13 @@ processors:
 output.elasticsearch:
   hosts: ["192.168.100.29:9200"]
   indices:
-    - index: "filebeat"
+    - index: "filebeat-%{[agent.version]}-%{+yyyy.MM.dd}"
 
 logging.json: true
 logging.metrics.enabled: false
 
 # ILM setup
 # ---------
-setup.ilm.enabled: false
+setup.ilm.enabled: auto
+setup.ilm.rollover_alias: "filebeat"
 ilm.enabled: false
