--- a/docker/config/prometheus.yml
+++ b/docker/config/prometheus.yml
@@ -1,51 +1,69 @@
 # my global config
 global:
-  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
+  scrape_interval:     5m # Set the scrape interval to every 1m. Default is every 1 minute.
+  scrape_timeout: 10s
+  evaluation_interval: 1m # Evaluate rules every 1m. The default is every 1 minute.
+  external_labels:
+    monitor: 'mali-host-monitor'
+rule_files:
+  - "targets.rules"
+  - "host.rules"
+  - "containers.rules"
 scrape_configs:
   - job_name: 'prometheus'
-    scrape_interval: 1m
+    scrape_interval: 120s
+    scrape_timeout: 120s
     static_configs:
       - targets: ['192.168.100.29:9090']
   - job_name: 'node-exporter'
+    scrape_interval: 120s
+    scrape_timeout: 120s
     static_configs:
       - targets: ['192.168.100.29:9100']
   - job_name: 'cAdvisor'
+    scrape_interval: 120s
+    scrape_timeout: 120s
     static_configs:
       - targets: ['192.168.100.29:9101']
   - job_name: 'grafana'
-    scrape_interval: 1m
+    scrape_interval: 120s
+    scrape_timeout: 120s
     metrics_path: '/metrics'
     static_configs:
       - targets: ['192.168.100.29:3000']
   - job_name: 'config-service'
-    scrape_interval: 1m
+    scrape_interval: 120s
+    scrape_timeout: 120s
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['192.168.100.29:8888']
   - job_name: 'discovery-service'
-    scrape_interval: 1m
+    scrape_interval: 120s
+    scrape_timeout: 120s
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['192.168.100.29:8761']
   - job_name: 'auth-service'
-    scrape_interval: 1m
+    scrape_interval: 120s
+    scrape_timeout: 120s
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['192.168.100.29:5001']
   - job_name: 'gateway-service'
-    scrape_interval: 1m
+    scrape_interval: 120s
+    scrape_timeout: 120s
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['192.168.100.29:8080']
   - job_name: 'alert-service'
-    scrape_interval: 1m
+    scrape_interval: 120s
+    scrape_timeout: 120s
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['192.168.100.29:5002']
   - job_name: 'user-service'
-    scrape_interval: 1m
+    scrape_interval: 120s
+    scrape_timeout: 120s
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['192.168.100.29:5003']
